syntax = "proto3";

import "booking_history.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "BookingService.Presentation.Grpc";

package booking;

service BookingService {
  rpc CreateBooking(BookingRequest) returns (BookingResponse);
  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingResponse);
  rpc CompleteBooking(CompleteBookingRequest) returns (CompleteBookingResponse);
  rpc GetBookingById(GetBookingRequest) returns (GetBookingResponse);
  rpc QueryBookings(QueryBookingsRequest) returns (QueryBookingsResponse);
  rpc QueryBookingHistory(QueryBookingHistoryRequest) returns (QueryBookingHistoryResponse);
}

enum BookingStatus {
  BOOKING_UNSPECIFIED = 0;
  BOOKING_CREATED = 1;
  BOOKING_CANCELLED = 2;
  BOOKING_COMPLETED = 3;
}

message Booking {
  string booking_id = 1;
  string tutor_id = 2;
  string time_slot_id = 3;
  string subject_id = 4;
  BookingStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  string name = 7;
}
    
message BookingRequest {
  string tutor_id = 1;
  string time_slot_id = 2;
  string subject_id = 3;
  string name = 4;
}
message BookingResponse {
  string booking_id = 1;
}

message CancelBookingRequest {
  string booking_id = 1;
  string name = 2;
  string reason = 3;
}
message CancelBookingResponse {
  int32 result = 1;
}

message CompleteBookingRequest {
  string booking_id = 1;
}
message CompleteBookingResponse {
  int32 result = 1;
}

message GetBookingRequest {
  string booking_id = 1;
}
message GetBookingResponse {
  Booking booking = 1;
}

message QueryBookingsRequest {
  repeated string ids = 1;
  optional string tutor_id = 2;
  optional string subject_id = 3;
  optional BookingStatus status = 4;
  optional string name = 5;
  string cursor = 6;
  int32 page_size = 7;
}
message QueryBookingsResponse {
  repeated Booking bookings = 1;
}

message QueryBookingHistoryRequest {
  repeated string ids = 1;
  optional BookingHistoryItemKind kind = 2;
  string cursor = 3;
  int32 page_size = 4;
}
message QueryBookingHistoryResponse {
  repeated BookingHistory history = 1;
}